--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#0287c3</color>
     <color name="colorAccent">#FF80AB</color>
+    <color name="colorBackgroundGrey">#DCDCDC</color>
+    <color name="colorPrimaryWhite">#FFFFFF</color>
+
+
 </resources>
