--- a/app/src/main/res/layout/activity_details_neighbour.xml
+++ b/app/src/main/res/layout/activity_details_neighbour.xml
@@ -82,7 +82,7 @@
 
             <TextView
                 android:id="@+id/Phone"
-                android:text="    06 06 06 06 06"
+                android:text="    +33 6 06 06 06 06"
                 android:layout_width="fill_parent"
                 android:layout_height="30dp"
                 android:layout_below="@+id/Adresse"
