--- a/app/src/main/res/layout/activity_details_neighbour.xml
+++ b/app/src/main/res/layout/activity_details_neighbour.xml
@@ -11,8 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#C8C8C8"
-        android:paddingHorizontal="5dp"
+        android:paddingLeft="5dp"
         android:paddingTop="5dp"
+        android:paddingRight="5dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
@@ -23,7 +24,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:ignore="UselessParent">
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
@@ -49,6 +51,7 @@
                             android:layout_marginTop="70dp"
                             android:layout_marginEnd="16dp"
                             android:background="@null"
+                            android:contentDescription="@string/icon_address"
                             app:srcCompat="@drawable/ic_location__24dp" />
 
                         <ImageView
@@ -57,6 +60,7 @@
                             android:layout_marginTop="110dp"
                             android:layout_marginEnd="16dp"
                             android:background="@null"
+                            android:contentDescription="@string/icon_phone"
                             app:srcCompat="@drawable/ic_phone_black_24dp" />
 
                         <ImageView
@@ -167,6 +171,7 @@
                 android:id="@+id/Avatar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/image_avatar"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
@@ -175,9 +180,8 @@
                 android:id="@+id/WhiteName"
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="180dp"
-                android:text="Prenom"
                 android:textColor="@color/cardview_light_background"
                 android:textSize="50sp"
                 tools:ignore="PrivateResource" />
@@ -191,9 +195,8 @@
         android:id="@+id/Favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         android:backgroundTint="#FFFF"
-        android:clickable="true"
         app:fabCustomSize="60dp"
         app:layout_anchor="@id/toolbar"
         app:layout_anchorGravity="end|bottom" />
