--- a/app/src/main/res/layout/activity_details_neighbour.xml
+++ b/app/src/main/res/layout/activity_details_neighbour.xml
@@ -126,10 +126,6 @@
                         tools:ignore="PrivateResource">
 
 
-
-
-
-
                         <TextView
                             android:id="@+id/DescriptionTitle"
                             android:layout_width="match_parent"
@@ -159,10 +155,11 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/toolbar"
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
@@ -170,7 +167,6 @@
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
-
 
 
             <ImageView
@@ -182,30 +178,12 @@
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
 
-            <ImageButton
-                android:id="@+id/vue_return_btn"
-                android:layout_width="35dp"
-                android:layout_height="37dp"
-                android:layout_margin="@dimen/text_margin"
-                android:background="@android:color/transparent"
-                android:src="?attr/actionModeCloseDrawable"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
 
-            <TextView
-                android:id="@+id/WhiteName"
-                android:layout_width="wrap_content"
-                android:layout_height="70dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="180dp"
-                android:textColor="@color/cardview_light_background"
-                android:textSize="50sp"
-                android:fontFamily="sans-serif-black"
-                tools:ignore="PrivateResource" />
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin" />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -219,6 +197,6 @@
         android:layout_marginEnd="15dp"
         android:backgroundTint="#FFFF"
         app:fabCustomSize="60dp"
-        app:layout_anchor="@id/toolbar"
+        app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="end|bottom" />
 </android.support.design.widget.CoordinatorLayout>
